--- a/GUI/Components/_Imports.razor
+++ b/GUI/Components/_Imports.razor
@@ -8,3 +8,9 @@
 @using Microsoft.JSInterop
 @using GUI
 @using GUI.Components
+@using MudBlazor
+@using Classes;
+@using Microsoft.AspNetCore.Components;
+@using MudBlazor
+@using MudBlazor.Components
+@inject IDialogService DialogService
