--- a/GUI/Components/Individual/ResultView.razor
+++ b/GUI/Components/Individual/ResultView.razor
@@ -81,6 +81,7 @@
         {
             await OnEstatesDeleted.InvokeAsync();
         }
+        StateHasChanged();
     }
 
     private async  void Edit(Estate estate)
