--- a/GUI/Components/Layout/NavMenu.razor
+++ b/GUI/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">GUI</a>
+        <a class="navbar-brand" href="">Estates App</a>
     </div>
 </div>
 
