--- a/GUI/Components/Pages/Home.razor
+++ b/GUI/Components/Pages/Home.razor
@@ -5,6 +5,7 @@
 @inject ClientClass ClientClass
 @inject ISnackbar Snackbar
 @inject Model Model
+@inject IJSRuntime JS
 @rendermode InteractiveServer
 
 <MudDialogProvider/>
@@ -63,3 +64,17 @@
     <TreeView Name="Properties" @key="Model.VisualizationNodeProperties" VisualizationNode="Model.VisualizationNodeProperties" />
 }
 </MudPaper>
+
+<script>
+    window.downloadFileFromStream = async (fileName, contentStreamReference) => {
+        const arrayBuffer = await contentStreamReference.arrayBuffer();
+        const blob = new Blob([arrayBuffer]);
+        const url = URL.createObjectURL(blob);
+        const anchorElement = document.createElement('a');
+        anchorElement.href = url;
+        anchorElement.download = fileName ?? '';
+        anchorElement.click();
+        anchorElement.remove();
+        URL.revokeObjectURL(url);
+    }
+</script>
