--- a/GUI/Components/Individual/TreeView.razor
+++ b/GUI/Components/Individual/TreeView.razor
@@ -42,19 +42,21 @@
                         <MudItem>
                             <MudText> Left Bottom Position</MudText>
                             <MudText Typo="Typo.body2">
-                                Width: @SelectedValues.ElementAt(0).Data.FirstOrDefault().LeftBottom.Width
+                                @(SelectedValues.ElementAt(0).Data.FirstOrDefault().LeftBottom.Width < 0 ? $"Width: W {Math.Abs(SelectedValues.ElementAt(0).Data.FirstOrDefault().LeftBottom.Width)}" : $"Width: E {SelectedValues.ElementAt(0).Data.FirstOrDefault().LeftBottom.Width}")
                             </MudText>
                             <MudText Typo="Typo.body2">
-                                Height: @SelectedValues.ElementAt(0).Data.FirstOrDefault().LeftBottom.Height
+                                @(SelectedValues.ElementAt(0).Data.FirstOrDefault().LeftBottom.Height < 0 ? $"Height: S {Math.Abs(SelectedValues.ElementAt(0).Data.FirstOrDefault().LeftBottom.Height)}" : $"Width: N {SelectedValues.ElementAt(0).Data.FirstOrDefault().LeftBottom.Height}")
+
                             </MudText>
                         </MudItem>
                         <MudItem>
                             <MudText> Right Top Position</MudText>
                             <MudText Typo="Typo.body2">
-                                Width: @SelectedValues.ElementAt(0).Data.FirstOrDefault().RightTop.Width
+                                @(SelectedValues.ElementAt(0).Data.FirstOrDefault().RightTop.Width < 0 ? $"Width: W {Math.Abs(SelectedValues.ElementAt(0).Data.FirstOrDefault().RightTop.Width)}" : $"Width: E {SelectedValues.ElementAt(0).Data.FirstOrDefault().RightTop.Width}")
                             </MudText>
                             <MudText Typo="Typo.body2">
-                                Height: @SelectedValues.ElementAt(0).Data.FirstOrDefault().RightTop.Height
+                                @(SelectedValues.ElementAt(0).Data.FirstOrDefault().RightTop.Height < 0 ? $"Height: S {Math.Abs(SelectedValues.ElementAt(0).Data.FirstOrDefault().RightTop.Height)}" : $"Width: N {SelectedValues.ElementAt(0).Data.FirstOrDefault().RightTop.Height}")
+
                             </MudText>
                         </MudItem>
                     </MudGrid>
