--- a/GUI/Components/Individual/FindDialog.razor
+++ b/GUI/Components/Individual/FindDialog.razor
@@ -17,25 +17,25 @@
             @if (Model.GPS == 0)
             {
                 <MudItem>
-                    <MudTextField Label=" width" T="double" @bind-Value="Model.X1">
+                    <MudTextField Label=" width" T="double?" @bind-Value="Model.X1">
                 </MudTextField>
-                <MudTextField T="double" Label="height" @bind-Value="Model.Y1">
+                <MudTextField T="double?" Label="height" @bind-Value="Model.Y1">
                 </MudTextField>
                 </MudItem>
             } else
             {
                 <MudItem xs="6">
                     <MudText>Left Bottom Point</MudText>
-                    <MudTextField Label=" width" T="double" @bind-Value="Model.X1">
+                    <MudTextField Label=" width" T="double?" @bind-Value="Model.X1">
                     </MudTextField>
-                    <MudTextField T="double" Label="height" @bind-Value="Model.Y1">
+                    <MudTextField T="double?" Label="height" @bind-Value="Model.Y1">
                     </MudTextField>
                 </MudItem>
                 <MudItem xs="6">
                     <MudText>Right Top Point</MudText>
-                    <MudTextField Label=" width" T="double" @bind-Value="Model.X2">
+                    <MudTextField Label=" width" T="double?" @bind-Value="Model.X2">
                     </MudTextField>
-                    <MudTextField T="double" Label="height" @bind-Value="Model.Y2">
+                    <MudTextField T="double?" Label="height" @bind-Value="Model.Y2">
                     </MudTextField>
                 </MudItem>
             }
@@ -67,10 +67,10 @@
 
     public class FindModel
     {
-        public double X1 { get; set; }
-        public double Y1 { get; set; }
-        public double X2 { get; set; }
-        public double Y2 { get; set; }
+        public double? X1 { get; set; }
+        public double? Y1 { get; set; }
+        public double? X2 { get; set; }
+        public double? Y2 { get; set; }
         public int GPS { get; set; }
         public int EstateType { get; set; } //0-Property, 1-Parcel, 2-All
     }
