--- a/GUI/Components/Individual/ResultView.razor
+++ b/GUI/Components/Individual/ResultView.razor
@@ -2,7 +2,7 @@
 @using static GUI.Components.Client.Model
 @inject ClientClass ClientClass
 
-<MudTable Items="@List" Dense="true" Filter="new Func<Estate,bool>(FilterFunc)">
+<MudTable Items="@List" FixedHeader="true" Dense="true" Filter="new Func<Estate,bool>(FilterFunc)">
     <ToolBarContent>
         <MudText Typo="Typo.h6">Found Estates</MudText>
         <MudSpacer />
@@ -24,10 +24,18 @@
         <MudTd DataLabel="Type">@context.GetType().Name</MudTd>
         <MudTd DataLabel="Number">@context.Number</MudTd>
         <MudTd DataLabel="Description">@context.Description</MudTd>
-        <MudTd DataLabel="Width x1">@context.LeftBottom.Width</MudTd>
-        <MudTd DataLabel="Height x1">@context.LeftBottom.Height</MudTd>
-        <MudTd DataLabel="Width x2">@context.RightTop.Width</MudTd>
-        <MudTd DataLabel="Height x2">@context.RightTop.Height</MudTd>
+        <MudTd DataLabel="Width x1">
+            @(context.LeftBottom.Width < 0 ? $"W {Math.Abs(context.LeftBottom.Width)}" : $"E {context.LeftBottom.Width}")
+        </MudTd>
+        <MudTd DataLabel="Height x1">
+            @(context.LeftBottom.Height < 0 ? $"S {Math.Abs(context.LeftBottom.Height)}" : $"N {context.LeftBottom.Height}")
+        </MudTd>
+        <MudTd DataLabel="Width x2">
+            @(context.RightTop.Width < 0 ? $"W {Math.Abs(context.RightTop.Width)}" : $"E {context.RightTop.Width}")
+        </MudTd>
+        <MudTd DataLabel="Height x2">
+            @(context.RightTop.Height < 0 ? $"S {Math.Abs(context.RightTop.Height)}" : $"N {context.RightTop.Height}")
+        </MudTd>
         <MudTd DataLabel="References">
             @if(context.References!= null && context.References.Count() > 0)
             {
