--- a/GUI/Components/Individual/LoadRandomTreesDialog.razor
+++ b/GUI/Components/Individual/LoadRandomTreesDialog.razor
@@ -10,7 +10,7 @@
         </MudTextField>
         <MudTextField Label="Number of Properties" T="int?" @bind-Value="Data.PropertyCount">
         </MudTextField>
-        <MudTextField Min="0" Max="100" Label="Coverage %" T="int?" @bind-Value="Data.Coverage">
+        <MudTextField Min="0" Max="100" Label="Coverage %" T="double?" @bind-Value="Data.Coverage">
         </MudTextField>
 
       
@@ -40,6 +40,6 @@
     {
     public int? ParcelCount { get; set; }
     public int? PropertyCount { get; set; }
-    public int? Coverage { get; set; }
+    public double? Coverage { get; set; }
     }
 }
