--- a/GUI/Components/Pages/Home.razor
+++ b/GUI/Components/Pages/Home.razor
@@ -2,7 +2,7 @@
 @page "/all"
 @using GUI.Components.Client
 @using GUI.Components.Individual
-@inject ClientClass ClientClass
+@inject Controller ClientClass
 @inject ISnackbar Snackbar
 @inject Model Model
 @inject IJSRuntime JS
